# haiku-vmm

./: .gitignore  Cargo.toml  README.md
linux-loader/src/configurator/x86_64/: linux.rs
linux-loader/src/loader/: mod.rs
linux-loader/src/loader/bzimage/: mod.rs
nvmm/: Cargo.toml
nvmm/src/: i8042.rs  io_bus.rs  lapic.rs  lib.rs  linux.rs  memory_bus.rs  pic.rs  pit.rs  regs.rs  rtc.rs  serial.rs  sys.rs  virtio.rs
scripts/: create_vm_resources.sh
vmm/: Cargo.toml  build.rs  create_image.sh  init.sh
vmm-cli/: Cargo.toml
vmm-cli/src/: main.rs
vmm/src/: lib.rs  types.rs  utils.rs
vmm/src/devices/: cmos.rs  i8042.rs  ioapic.rs  lapic.rs  mod.rs  pic.rs  pit.rs  rtc.rs  serial.rs  virtio_blk.rs  virtio_console.rs  virtio_rng.rs
vmm/src/devices/virtio/: mod.rs  virtio_blk.rs  virtio_console.rs  virtio_mmio_device.rs  virtio_rng.rs
vmm/src/nvmm/: backend.rs  machine.rs  mod.rs  sys.rs  system.rs
vmm/src/nvmm/vcpu/: mod.rs  regs.rs  runner.rs
vmm/src/os/: linux.rs  mod.rs  mptable.rs
vmm/src/system/: backend.rs  machine.rs  mod.rs
vmm/src/system/nvmm/: mod.rs  sys.rs  system.rs
vmm/src/system/vmachine/: mod.rs  regs.rs  runner.rs  vcpu.rs
