[package]
name = "vmm-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
vmm = { path = "../vmm" }
env_logger = "0.11"
log = "0.4"
anyhow = "1.0.100"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4.11", features = ["derive"] }
signal-hook = "0.3"
libc = "0.2"
vm-memory = "0.14.1"
iced-x86 = "1.21.0"
vm-device = "0.1.0"
