[package]
name = "vmm"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "1.0.0-alpha.1"
bitflags = "2.10.0"
vm-memory = { version = "0.14", features = ["backend-mmap"] }
log = "0.4"
futures = "0.3"
linux-loader = { version = "0.11", features = ["bzimage", "elf"] }
virtio-bindings = { git = "https://github.com/rust-vmm/vm-virtio", rev = "01e116c33b1e1ada1afc6734af53316f46fcd1b6" }
virtio-queue = { git = "https://github.com/rust-vmm/vm-virtio", rev = "01e116c33b1e1ada1afc6734af53316f46fcd1b6" }
virtio-device = { git = "https://github.com/rust-vmm/vm-virtio", rev = "01e116c33b1e1ada1afc6734af53316f46fcd1b6" }
virtio-console = { git = "https://github.com/rust-vmm/vm-virtio", rev = "01e116c33b1e1ada1afc6734af53316f46fcd1b6" }
virtio-blk = { git = "https://github.com/rust-vmm/vm-virtio", rev = "01e116c33b1e1ada1afc6734af53316f46fcd1b6" }
anyhow = "1.0.100"
vm-device = "0.1.0"
vm-superio = "0.5.0"
iced-x86 = "1.21.0"
signal-hook = "0.3"
byte-unit = "4.0"
chrono = "0.4"
zerocopy = { version = "0.7", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1", features = ["macros", "rt"] }
