[package]
name = "vmm"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "1.0.0-alpha.1"
bitflags = "2.10.0"
vm-memory = { version = "0.18", features = ["backend-mmap"] }
log = "0.4"
futures = "0.3"
linux-loader = { path = "../linux-loader", features = ["bzimage", "elf"] }
virtio-bindings = { git = "https://github.com/rust-vmm/vm-virtio"}
virtio-queue = { git = "https://github.com/rust-vmm/vm-virtio"}
virtio-device = { git = "https://github.com/rust-vmm/vm-virtio"}
virtio-console = { git = "https://github.com/rust-vmm/vm-virtio"}
virtio-blk = { git = "https://github.com/rust-vmm/vm-virtio"}
anyhow = "1.0.100"
vm-device = "0.1.0"
vm-superio = "0.8.1"
iced-x86 = "1.21.0"
signal-hook = "0.4"
byte-unit = "4"
chrono = "0.4"
zerocopy = { version = "0.7", features = ["derive"] }
rand = "0.9"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
